--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div id="sand">
       <img src="images/sapphire-gem.png" alt="Sapphire">
-    </div>
+    </div>learn submit
 
     <div id="ocean"></div>
     <img src="images/yellow-diamond-1.png" alt="yellow diamond">
